Fix text alignment issue

--- a/src/style.scss
+++ b/src/style.scss
@@ -14,6 +14,7 @@
 
 .eb-progressbar-progress {
 	display: flex;
+  align-items: center;
 	justify-content: space-between;
 	position: absolute;
 	top: 0;
